--- a/TP2/Web/index.html
+++ b/TP2/Web/index.html
@@ -6,7 +6,8 @@
 <body>
 
 <h1>This is a Heading</h1>
-<p>This is a paragraph.</p>
+<p>This is a paragraph.
+jfdjhfjidhfui</p>
 <img src="index.jpeg" >
 
 </body>
